cluster/apps/adguard-home.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networking
